[package]
name = "koala2midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
midi_file = "0.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1.0"
zip = "0.6.3"
